# intel-pengo

./: NOTES.txt  README.md  docker-compose.follower.yml  docker-compose.yml  launch_demo_tracking.bash
.github/workflows/: docker-image.yml  docker-joy-teleop.yaml  docker-keyboard-teleop.yaml  docker-kobuki-driver.yaml  docker-kobuki-navigation.yaml  docker-kobuki.yaml  docker-openvino.yaml  docker-pengo-stalker.yaml  docker-person-follower.yaml  docker-realsense2-updater.yaml  docker-realsense2.yaml  docker-rover.yaml  docker-rplidar.yaml  docker-slam-toolbox.yaml
docker/d435i-nvidia-nx/: Dockerfile
docker/depth-to-scan/: Dockerfile  d2s.launch  entrypoint.sh
docker/hector/: Dockerfile  entrypoint.sh  hector_mapping.launch
docker/joy-teleop/: Dockerfile  entrypoint.sh
docker/keyboard-teleop/: Dockerfile  entrypoint.sh
docker/kobuki-driver/: Dockerfile  entrypoint.sh
docker/kobuki-driver/kobuki/kobuki_launch/: CMakeLists.txt  package.xml
docker/kobuki-driver/kobuki/kobuki_launch/launch/: kobuki.launch
docker/kobuki-driver/kobuki/kobuki_launch/launch/includes/: mobile_base.launch.xml
docker/kobuki-driver/kobuki/kobuki_launch/param/: diagnostics.yaml  mux.yaml
docker/kobuki-driver/kobuki/kobuki_node/launch/: minimal.launch
docker/kobuki-driver/kobuki/kobuki_node/param/: base.yaml
docker/kobuki-navigation/: Dockerfile
docker/kobuki-navigation/turtlebot_navigation/: package.xml
docker/kobuki-navigation/turtlebot_navigation/launch/includes/: move_base.launch.xml  velocity_smoother.launch.xml
docker/kobuki-navigation/turtlebot_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  smoother.yaml
docker/multicam-rtab/: Dockerfile  multi_camera_rtabmap.launch
docker/openvino/: Dockerfile  entrypoint.sh  silent.cfg
docker/openvino/catkin_ws/src/ros_openvino_toolkit/dynamic_vino_lib/: CMakeLists.txt
docker/openvino/catkin_ws/src/ros_openvino_toolkit/vino_launch/launch/: pengo_detection.launch  pengo_people.launch  pengo_reidentification.launch  pengo_segmentation.launch
docker/openvino/catkin_ws/src/ros_openvino_toolkit/vino_launch/param/: pengo_detection_cpu.yaml  pengo_detection_myriad.yaml  pengo_people_cpu.yaml  pengo_people_myriad.yaml  pengo_reidentification_cpu.yaml  pengo_reidentification_myriad.yaml  pengo_segmentation.yaml  pipeline_image.yaml  pipeline_image_oss.yaml  pipeline_people_myriad.yaml  pipeline_people_oss.yaml  pipeline_reidentification.yaml  pipeline_video.yaml
docker/openvino/catkin_ws/src/ros_openvino_toolkit/vino_param_lib/: CMakeLists.txt
docker/pengo-stalker/: Dockerfile
docker/pengo-stalker/pengo_stalker/: CMakeLists.txt  package.xml
docker/pengo-stalker/pengo_stalker/include/pengo_stalker/: PengoStalkerRos.h
docker/pengo-stalker/pengo_stalker/launch/: stalker.launch
docker/pengo-stalker/pengo_stalker/src/: PengoStalkerRos.cpp  pengo_stalker_node.cpp
docker/person-follower/: Dockerfile  entrypoint.sh
docker/person-follower/hupster/hupster_detection/: CMakeLists.txt  package.xml
docker/person-follower/hupster/hupster_detection/launch/: intel.launch
docker/person-follower/hupster/hupster_detection/src/: object_pose_estimation_node.cpp  person_follower_node.cpp  person_follower_node_depr.cpp  target_filter_node.cpp
docker/realsense2/: Dockerfile  entrypoint.sh  rs_camera.sh
docker/realsense2-rtabmap/: Dockerfile  rs_camera.sh
docker/realsense2-t265/: Dockerfile  entrypoint.sh  rs_camera.sh  rs_t265_pengo.launch
docker/realsense2-t265/sensor_odom_manager/src/sensor_odom_manager/: sensor_odom_manager_node.py
docker/realsense2-updater/: Dockerfile  entrypoint.sh
docker/rover-driver/: Dockerfile  entrypoint.sh  starterkit_bringup.launch
docker/rplidar/: Dockerfile  entrypoint.sh  rplidar.launch
docker/slam-toolbox/: Dockerfile
